--- a/app/core/home/templates/home/first.html
+++ b/app/core/home/templates/home/first.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
-{% block content %}
+
+{% block login %}
     {% from "forms/macros.html" import render_field %}
 
 <div class="panel panel-default">
