--- a/app/core/home/templates/home/wizard.html
+++ b/app/core/home/templates/home/wizard.html
@@ -1,13 +1,21 @@
 {% extends "base.html" %}
+
 {% block content %}
     {% from "forms/macros.html" import render_field %}
 
-      <form class="form" method="post">
-        {{ form.csrf_token }}
-        <h2 class="form">{{ _('Add organisation') }}</h2>
-        {{ render_field(form.name, class="input-xlarge") }}
-        {{ render_field(form.submit, class="btn btn-primary") }}
-      </form>
+<div class="panel panel-default">
+    <div class="panel-heading">
+        <h4>{{ _('Add organisation') }}</h4>
+    </div>
+    <div class="panel-body">
+      <div class="well well-xs col-md-6">
+        <form class="form" role="form" method="post">
+            {{ form.csrf_token }}
+            {{ render_field(form.name, with_label=1) }}
+            {{ render_field(form.submit, class="btn btn-default btn-primary") }}
+        </form>
+      </div>
+    </div>
+</div>
 
 {% endblock %}
-
