--- a/app/templates/menu_top.html
+++ b/app/templates/menu_top.html
@@ -15,6 +15,7 @@
           <li {% if request.endpoint == "home.homepage" %}class="active"{% endif %}><a href="{{ url_for('home.homepage') }}">{{ _('Home') }}</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
+        {% if g.user.organisation_id %}
           <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">{{ _('Servers') }}&nbsp;<b class="caret"></b></a>
             <ul class="dropdown-menu" role="menu">
@@ -31,6 +32,7 @@
           </li>
           {% if g.server %}
               <li class="navbar-link" id="servers_list" title="ID server : {{ g.server.id }}"><a>{{_('on') }} {{ g.server.address }}</a></li>
+          {% endif %}
           {% endif %}
               <li><a href="{{url_for('profil.myprofil')}}">{{ _('Welcome') }}  {{current_user.displayname}}</a></li>
               <li title="{{_('Logout')}}"><a href="{{ url_for('login.logout') }}" class="logout"><i class="glyphicon glyphicon-off"></i></a></li>
