--- a/app/templates/menu_left.html
+++ b/app/templates/menu_left.html
@@ -8,6 +8,7 @@
                                   ('profil.accounts', 'Accounts', 200),
                                   ('organisations.organisation', 'Organisations', 300),
                                   ('servers.server', 'Servers', 200),
+                                  ('authentification.auth_configure', 'Authentification', 300),
                                   ('market.themarket', 'Market', 200),
         ] %}
             {% if g.user.role >= role %}
