--- a/app/core/authentification/templates/authentification/authentification_configuration.html
+++ b/app/core/authentification/templates/authentification/authentification_configuration.html
@@ -23,6 +23,8 @@
                     </div>
                     <div class="tab-pane" id="authldap">
                         {{ form.csrf_token }}
+                        {{ render_field(form.login, with_label=1) }}
+                        {{ render_field(form.passwd, with_label=1) }}
                         {{ render_field(form.host, with_label=1) }}
                         {{ render_field(form.basedn, with_label=1) }}
                         {{ render_field(form.searchfilter, with_label=1) }}
