--- a/app/templates/menu_top.html
+++ b/app/templates/menu_top.html
@@ -15,7 +15,7 @@
           <li {% if request.endpoint == "home.homepage" %}class="active"{% endif %}><a href="{{ url_for('home.homepage') }}">{{ _('Home') }}</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
-        {% if g.user.organisation_id %}
+        {% if g.user.organisation_id and g.user.role >= 200 %}
           <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">{{ _('Servers') }}&nbsp;<b class="caret"></b></a>
             <ul class="dropdown-menu" role="menu">
