Manager can be show user plugin to configure it

--- a/app/templates/table-header.html
+++ b/app/templates/table-header.html
@@ -1,3 +1,9 @@
+{% if role_url_add %}
+  {% set role = role_url_add %}
+{% else %}
+  {% set role = 300 %}
+{% endif %}
+
   <div class="row" style="margin-right: 0px; padding-left: 0px; margin-bottom: 20px;">
     <div class="col-md-3 col-md-offset-9">
       <div class="input-group input-group-sm">
@@ -5,7 +11,7 @@
         <input class="search form-control" type="search">
         <div class="input-group-btn">
           <button class="btn btn-primary reset"><i class="glyphicon glyphicon-remove"></i></button>&nbsp;&nbsp;
-          {% if url_add %}
+          {% if url_add and g.user.role >= role %}
               <a class="btn btn-primary btn-xs" href="{{ url_add }}">
               {% if icon_url_add %}
                   <i class="glyphicon glyphicon-{{ icon_url_add }}"></i>
