--- a/app/core/market/templates/market/market.html
+++ b/app/core/market/templates/market/market.html
@@ -20,7 +20,7 @@
     {% for u in modules %}
         {% if u.plugin.parent == 'server' and g.server_id and g.user.role >= 200 %}
             {% include "market_list.html" %}
-        {% elif u.plugin.parent == 'organisation' and not g.server_id and g.user.role >= 200 %}
+        {% elif u.plugin.parent == 'organisation' or u.plugin.parent == 'user' and not g.server_id and g.user.role >= 200 %}
             {% include "market_list.html" %}
         {% elif u.plugin.parent == 'user' and not g.server_id and g.user.role == 100 %}
             {% include "market_list.html" %}
