--- a/app/core/profil/templates/profil/profil.html
+++ b/app/core/profil/templates/profil/profil.html
@@ -7,27 +7,54 @@
         <h3>{{ _('Your Account') }} ({{ current_user.username }})</h3>
     </div>
     <div class="panel-body">
-        <div class="well well-xs col-md-6">
+        <div class="well well-xs col-md-12">
             <div class="tabbable">
                 <ul class="nav nav-tabs">
-                    <li class="active">
-                    <a href="#profil" data-toggle="tab">{{ _('Profil') }}</a>
-                    </li>
+                    <li class="active"><a href="#informations" data-toggle="tab">{{ _('Informations') }}</a></li>
+                    <li class=""><a href="#passwd" data-toggle="tab">{{ _('Password') }}</a></li>
                 </ul>
                 <br>
                 <div class="tab-content">
-                    <div class="tab-pane active" id="profil">
+                    <div class="tab-pane active" id="informations">
                         <form class="form" method="post">
-                            <fieldset>
                             {{ form.csrf_token }}
-                            <img src="{{ account.email | gravatar }}"></img>
-                            {{ render_field(form.username, with_label=1, disabled="disabled") }}
-                            {{ render_field(form.displayname, with_label=1) }}
-                            {{ render_field(form.email, with_label=1) }}
-                            {{ render_field(form.language, with_label=1) }}
-                            {{ render_field(form.password, with_label=1) }}
-                            {{ render_field(form.submit, class="btn btn-default btn-primary") }}
+                            <fieldset>
+                            <div class="col-md-2">
+                                <img class="img-rounded" src="{{ account.email | gravatar }}"></img>
+                                <h4>{{ current_user.displayname }}</h4>
+                            </div>
+                            <div class="col-md-5">
+                             <h4>{{ _('Personnal') }}</h4>
+                            {{ render_field(form.username, with_label=1, disabled="disabled", with_icon="user") }}
+                            {{ render_field(form.displayname, with_label=1, with_icon="user") }}
+                            {{ render_field(form.language, with_label=1, with_icon="calendar") }}
+                            {{ render_field(form.email, with_label=1, with_icon="envelope") }}
+                            </div>
+                            <div class="col-md-5">
+                              <h4>{{ _('Company') }}</h4>
+                              <div class="form-group">
+                                 <label for="organisation" class="control-label">
+                                     Organisation:
+                                 </label>
+                                 <div class="input-group">
+                                     <span class="input-group-addon"><i class="glyphicon glyphicon-home"></i></span>
+                                     <input class="form-control" disabled="disabled" id="organisation" name="organisation" placeholder="" value="{{ g.user_organisation.name }}" type="text">
+                                 </div>
+                              </div>
+                            </div>
                             </fieldset>
+                            {{ render_field(form.submit, class="btn btn-primary") }}
+                        </form>
+                    </div>
+                    <div class="tab-pane" id="passwd">
+                        <form class="form" method="post">
+                            {{ form.csrf_token }}
+                            <fieldset>
+                            <div class="col-md-2">
+                                {{ render_field(form.password, with_label=1) }}
+                            </div>
+                            </fieldset>
+                            {{ render_field(form.submit, class="btn btn-primary") }}
                         </form>
                     </div>
                 </div>
