--- a/app/core/profil/templates/profil/profil.html
+++ b/app/core/profil/templates/profil/profil.html
@@ -42,7 +42,7 @@
                                  </label>
                                  <div class="input-group">
                                      <span class="input-group-addon"><i class="glyphicon glyphicon-home"></i></span>
-                                     <input class="form-control" disabled="disabled" id="organisation" name="organisation" placeholder="" value="{{ g.user_organisation.name }}" type="text">
+                                     <input class="form-control" disabled="disabled" id="organisation" name="organisation" placeholder="" value="{{ current_user.organisation_name }}" type="text">
                                  </div>
                               </div>
                             </div>
