--- a/app/core/home/templates/home/wizard.html
+++ b/app/core/home/templates/home/wizard.html
@@ -12,7 +12,12 @@
       <div class="well well-xs col-md-6">
         <form class="form" role="form" method="post">
             {{ form.csrf_token }}
-            {{ render_field(form.name, with_label=1) }}
+            {% if current_user.organisation_id %}
+                {{ render_field(form.name, with_label=1, disabled="disabled") }}
+            {% else %}
+                {{ render_field(form.name, with_label=1) }}
+            {% endif %}
+            {{ render_field(form.domain, with_label=1) }}
             {{ render_field(form.submit, class="btn btn-default btn-primary") }}
         </form>
       </div>
