--- a/app/core/organisations/templates/organisations/organisation_add.html
+++ b/app/core/organisations/templates/organisations/organisation_add.html
@@ -11,6 +11,7 @@
         <form class="form" role="form" method="post">
             {{ form.csrf_token }}
             {{ render_field(form.name, with_label=1) }}
+            {{ render_field(form.domain, with_label=1) }}
             {{ render_field(form.description, with_label=1) }}
             {{ render_field(form.submit, class="btn btn-default btn-primary") }}
         </form>
