added anonymous section to print content

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,4 +1,3 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN">
 <html lang="en">
 <html xmlns="http://www.w3.org/1999/xhtml">
     <head>
@@ -16,6 +15,9 @@
         {% block menu_top %}
         {% endblock %}
         {% include "messages.html" %}
+    {% elif is_anonymous_content %}
+        {% block anonymous_content %}
+        {% endblock %}
     {% else %}
         {% include "messages.html" %}
         {% block login %}
