updated bootstrap, tablesorted, bootstrap theme

--- a/app/core/home/templates/home/home.html
+++ b/app/core/home/templates/home/home.html
@@ -13,11 +13,11 @@
         <span class="label label-warning">{{_('Step 5')}}</span> {{_('Enjoy :)')}}<br><br>
 
         <div class="alert alert-info">
-            <p>{{_('Information : If you need more information please contact me !')}}</p>
+            <span>{{_('Information : If you need more information please contact me !')}}</span>
         </div>
 
         <div class="alert alert-danger">
-            <p>{{_('Important')}} : {{_('This web interface is still in beta test, please do not consider it for production !')}}</p>
+            <span>{{_('Important')}} : {{_('This web interface is still in beta test, please do not consider it for production !')}}</span>
         </div>
     </div>
 {% endblock %}
