some change on html, css

--- a/app/templates/menu_left.html
+++ b/app/templates/menu_left.html
@@ -1,6 +1,6 @@
 {% if (g.server or (current_user.role >= 50 and current_user.role != 100)) and current_user.organisation_id %}
-<div class="well">
-    <ul class="nav nav-pills nav-stacked">
+<div class="well sidebar">
+    <ul class="nav nav-pills nav-stacked nav-sidebar">
         {% if current_user.role >= 50 and current_user.role != 100 %}
             <li class="nav-header"><h3>{{ _('Configuration') }}</h3></li>
         {%- endif %}
@@ -25,7 +25,7 @@
                     </li>
                     {% for pm in g.plugins_list|sort %}
                         {% if pm.dep == p.module %}
-                            <ul class="nav nav-pills nav-stacked">
+                            <ul class="nav nav-pills nav-stacked nav-sidebar">
                                 <li {% if  pm.url == request.endpoint %} class="active" {% endif %}>
                                     <a href="{{url_for(pm.url)}}" class="col-md-offset-1">{{pm.name}}</a>
                                 </li>
