--- a/app/static/css/custom.css
+++ b/app/static/css/custom.css
@@ -1,15 +1,3 @@
-#footer {
-  width: 100%;
-  padding: 0px 10px 0px 0px;
-  position: fixed;
-  bottom:0px;
-}
-
-.row {
-    margin-right: 0px;
-    margin-left: 0px;
-}
-
 .form-signin {
     max-width: 420px;
     padding: 19px 29px 29px;
@@ -31,4 +19,8 @@
 .nav-sidebar > .active > a {
   color: #fff;
   background-color: #428bca;
+}
+
+.container {
+    margin-top: 60px;
 }
