--- a/app/templates/menu_top.html
+++ b/app/templates/menu_top.html
@@ -1,15 +1,21 @@
-{% if current_user.is_authenticated() %}
+{% if is_anonymous_content or current_user.is_authenticated() %}
 
-<div class="navbar navbar-default navbar-static-top" role="navigation">
+<div id="navbar-top" class="navbar navbar-default navbar-fixed-top affix-top" data-spy="affix" data-offset-top="950" role="navigation">
+  <div class="container-fluid">
     <div class="navbar-header">
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="{{ url_for('home.homepage') }}">XiVO</a>
+      {% if current_user.is_authenticated() %}
+          <a class="navbar-brand" href="{{ url_for('home.homepage') }}">XiVO</a>
+      {% else %}
+          <a class="navbar-brand" href="{{ url_for('frontend.homepage') }}">XiVO</a>
+      {% endif %}
     </div>
 
+    {% if current_user.is_authenticated() %}
     <div class="navbar-collapse collapse navbar-ex1-collapse">
         <ul class="nav navbar-nav">
           <li {% if request.endpoint == "home.homepage" %}class="active"{% endif %}><a href="{{ url_for('home.homepage') }}">{{ _('Home') }}</a></li>
@@ -38,6 +44,16 @@
               <li title="{{_('Logout')}}"><a href="{{ url_for('authentification.logout') }}" class="logout"><i class="glyphicon glyphicon-off"></i></a></li>
         </ul>
       </div>
+    {% endif %}
+
+    {% if is_anonymous_content and not current_user.is_authenticated() %}
+    <div class="navbar-collapse collapse navbar-ex1-collapse">
+        <ul class="nav navbar-nav">
+          <li><a href="{{ url_for('authentification.login') }}">{{ _('Sign In') }}</a></li>
+        </ul>
+    </div>
+    {% endif %}
+  </div>
 </div>
 
 {% endif %}
