fixed html issue

--- a/app/templates/menu_top.html
+++ b/app/templates/menu_top.html
@@ -41,7 +41,7 @@
           {% endif %}
           {% endif %}
               <li><a href="{{url_for('profil.myprofil')}}">{{ _('Welcome') }}  {{current_user.displayname}}</a></li>
-              <li title="{{_('Logout')}}"><a href="{{ url_for('authentification.logout') }}" class="logout"><i class="glyphicon glyphicon-off"></i></a></li>
+              <li><a href="{{ url_for('authentification.logout') }}" title="{{_('Logout')}}"><i class="glyphicon glyphicon-off" style="height: 20px;";></i></a></li>
         </ul>
       </div>
     {% endif %}
