--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -23,6 +23,7 @@
     {% endif %}
 
     {% if current_user.is_authenticated() %}
+      <div class="container-fluid">
         <div class="row">
             <div class="col-md-2">
                 {% if not wizard %}
@@ -47,6 +48,7 @@
                 </div>
             {% endif %}
         </div>
+      </div>
     {% endif %}
 
     {% block footer %}
