--- a/app/core/frontend/templates/frontend/header-frontend.html
+++ b/app/core/frontend/templates/frontend/header-frontend.html
@@ -13,7 +13,7 @@
                     <li><a href="{{ url_for('profil.signup') }}">Signup</a></li>
                 </ul>
                 <h1><img src="{{ url_for('frontend.static', filename='img/cloud.png') }}" height="50" alt="logo name"></h1>
-                <h1 class="page-title">Welcome to XiVO cloud plateform</h1>
+                <h1 class="page-title">Welcome to XiVO cloud platform</h1>
                 <h4 class="page-sub-title">In the end, it's not going to matter how many breath you took, <br>but how many moments took your breath away.</h4>
                 <div class="showcase">
                     <a class="btn btn-warning btn-lg hidden-xs" href="#intro">Learn More &nbsp;&nbsp;<i class="fa fa-play"></i></a>
